Fix baseline alignment for order and sale pages

--- a/src/components/SaleDetailsPanel/SaleDetailsPanel.css
+++ b/src/components/SaleDetailsPanel/SaleDetailsPanel.css
@@ -171,7 +171,7 @@
 
   @media (--viewportLarge) {
     display: block;
-    margin: 119px 0 0 0;
+    margin: 120px 0 0 0;
   }
 }
 
@@ -237,11 +237,7 @@
 }
 
 .feed {
-  margin-top: 17px;
-
-  @media (--viewportMedium) {
-    margin-top: 20px;
-  }
+  margin-top: 20px;
 }
 
 .sendMessageForm {
